# metal-cpp

./: CMakeLists.txt  MetalAdder.cpp  MetalAdder.hpp  README.md  main.cpp  test.metal
metal-cmake/: CMakeLists.txt  definition.cpp
